# snake

./: .clangd  CMakeLists.txt  game_config.h  main.cpp
engine/: CMakeLists.txt  image.h  random.h  text.h  window.h
snake/: CMakeLists.txt  assets.h  cell.h  game_state.h  game_ui.h  grid.h  restart_button.h  score_counter.h  snake_data.h
